✨#23 - 방문명소 기록시 명소명과 사진URL 저장
* MemberAttraction 과 attraction 둘다 가지고있던 명소명을 Attraction에만 가지게끔 설계변경.

* 불필요하게 Wrapper 타입으로 설정되어있던 memberId 파라미터를 원시타입으로 변경